<resources>
    <string name="app_name">Такси</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fontSize">24sp</string>
    <string name="fontFamily">Roboto</string>
    <string name="google_maps_key">AIzaSyBVb_96CF4Caz69KduaF9RWLqUpZyJvW0E</string>

    <string name="action_settings">Настройки</string>
    <string name="formatted_place_data">
        Имя: %1$s\nАдрес: %2$s\nТелефон: %3$s\nВебсайт: %4$s\nРейтинг: %5$s\nИдентификатор: %6$s\n
    </string>
    <string name="search_place">Поиск места</string>
    <string name="make_order">Заказать</string>
    <string name="price">Цена: </string>
    <string name="location_from">Откуда Вас забрать?</string>
    <string name="location_to">Куда Вас доставить?</string>
    <string name="text_select_time">Выберите время:</string>
    <string name="now">Сейчас</string>
    <string name="text_success_ordered">Такси заказано</string>
    <string name="text_success_ordered_description">Машина подъедет к Вам в %1$s.\nВаш водитель %2$s\nМашина: %3$s</string>
    <string name="text_ok">Ок</string>


</resources>
